--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,4 +1,4 @@
 <p-menubar [model]="menuItems">
-  <img src="./favicon.ico" alt="Icono">
+  <img src="./favicon.ico" alt="Icono"> hola
 </p-menubar>
 
